--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <div class="content">
-        <div class="mainBody">
-            <div class="mainScreen">
-                
-            </div>
-            <div class="firstColumn">
-                <button>AC</button>
-                <button>7</button>
-                <button>4</button>
-                <button>1</button>
-            </div>
-            <div class="secondColumn">
-                <button>C</button>
-                <button>8</button>
-                <button>5</button>
-                <button>2</button>
-                <button>0</button>
-            </div>
-            <div class="thirdColumn">
-                <button>9</button>
-                <button>6</button>
-                <button>3</button>
-                <button>.</button>
-            </div>
-            <div class="fourthColumn">
-                <button>/</button>
-                <button>X</button>
-                <button>+</button>
-                <button>-</button>
-                <button>=</button>
-            </div>
-        </div>
+  </head>
+  <body>
+    <div class="mainBody">
+      <div class="mainScreen">
+
+      </div>
+      <div class="buttonContent">
+        <div class="firstRow">
+            <button>AC</button>
+            <button>C</button>
+            <button>BS</button>
+            <button>/</button>
+          </div>
+          <div class="secondRow">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>X</button>
+          </div>
+          <div class="thirdRow">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+          </div>
+          <div class="fourthRow">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+          </div>
+          <div class="fithRow">
+            <button id="ZeroFullSize">0</button>
+            <button>.</button>
+            <button>=</button>
+          </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
