--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h3>The Odin Project Calulator</h3>
     <div class="mainBody">
       <div class="mainScreen">
 
