Updated JS to output button presses

--- a/index.html
+++ b/index.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <h3>The Odin Project Calulator</h3>
     <div class="mainBody">
       <div class="mainScreen">
-
+        <p id="mainScreenOutput"></p>
       </div>
       <div class="buttonContent">
         <div class="firstRow">
-            <button>AC</button>
-            <button>C</button>
-            <button>BS</button>
-            <button>/</button>
+            <button id="AC">AC</button>
+            <button id="C">C</button>
+            <button id="BS">BS</button>
+            <button id="/">/</button>
           </div>
           <div class="secondRow">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>X</button>
+            <button id="7">7</button>
+            <button id="8">8</button>
+            <button id="9">9</button>
+            <button id="*">*</button>
           </div>
           <div class="thirdRow">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
+            <button id="4">4</button>
+            <button id="5">5</button>
+            <button id="6">6</button>
+            <button id="-">-</button>
           </div>
           <div class="fourthRow">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
+            <button id="1">1</button>
+            <button id="2">2</button>
+            <button id="3">3</button>
+            <button id="+">+</button>
           </div>
           <div class="fithRow">
-            <button id="ZeroFullSize">0</button>
-            <button>.</button>
-            <button>=</button>
+            <button class="ZeroFullSize" id="0">0</button>
+            <button id=".">.</button>
+            <button id="=">=</button>
           </div>
       </div>
     </div>
